# Peeper

./: .gitignore  README.md  package-lock.json  package.json  vue.config.js
public/: index.html
src/: main.js
src-tauri/: Cargo.toml  database.db  database.db-shm  database.db-wal  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.vue  Router.js
src/pages/: Error.vue  Home.vue
